--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Point das Coxinhas</title>
     <link rel="icon" href="assets/img/Logo Lanches.png">
     <link rel="stylesheet" href="assets/css/config.css">
@@ -37,8 +37,8 @@
                 </div>
                 <div class="redes--sociais"> <!--REDES SOCIAIS-->
                     <a target="_blank" href="https://api.whatsapp.com/send?phone=5521979001960&text=Olá%20Lanches.com%2C%20gostaria%20de%20informações"><img src="assets/img/whatsapp.png" alt="Whatsapp"></a>
-                    <a target="_blank" href="https://www.instagram.com/pointdascoxinhasoficial/"><img src="assets/img/instagram.png" alt="Instagram"></a>
-                    <a target="_blank" href="https://www.facebook.com/Rede-Lanches-114861933699450"><img src="assets/img/facebook.png" alt="Facebook"></a>
+                    <a target="_blank" href="https://instagram.com/pointdascoxinhas?utm_medium=copy_link"><img src="assets/img/instagram.png" alt="Instagram"></a>
+                    <a target="_blank" href="https://www.facebook.com/pointdascoxinhasoficial/"><img src="assets/img/facebook.png" alt="Facebook"></a>
                     <a target="_blank" href="mailto:pedidos.lanches2020@gmail.com;"><img src="assets/img/arroba.png" alt="E-mail"></a>
                 </div>
             </nav>
